# sura-rs

./: .gitignore  .gitmodules  Cargo.toml  a.spv  bake.cmd  build_shader.cmd  todo.md
assets/models/future_car/: license.txt  scene.gltf
assets/models/mystical_sphere/: license.txt  scene.gltf
assets/models/retro_cartoon_car/: scene.gltf
assets/shaders/: bindless.hlsl  bindless.ihlsl  light.ihlsl  mesh.glsl  mesh.hlsl  mesh.ihlsl  mesh.vert  pbr_ps.hlsl  samplers.ihlsl  simple.comp  simple.comp.spv  simple.frag  simple.frag.spv  simple.vert  simple.vert.spv  simple_ps.hlsl  simple_ps.spv  simple_vs.hlsl  simple_vs.spv
assets/shaders/old/: bindless.glsl  build_shader copy.cmd  simple.comp.spv  simple.frag.spv  simple.vert.spv
crates/lib/sura/: Cargo.toml
crates/lib/sura-asset/: Cargo.toml
crates/lib/sura-asset/src/: mesh.rs
crates/lib/sura-backend/: Cargo.toml
crates/lib/sura-backend/src/: lib.rs  math_utils.rs
crates/lib/sura-backend/src/vulkan/: device.rs  gpu_structs.rs  mod.rs  utils.rs  vulkan_device.rs
crates/lib/sura-imgui/: Cargo.toml
crates/lib/sura-imgui/src/: lib.rs
crates/lib/sura/src/: app.rs  buffer.rs  gpu_structs.rs  input.rs  lib.rs  renderer.rs  renderer_data.rs
crates/lib/sura/src/camera/: camera.rs  free_camera.rs  mod.rs  orbit_camera.rs
models/retro_television/: scene.gltf
shaders/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv  vert.spv
src/: device.rs  gpuStructs.rs  gpu_structs.rs  main.rs  renderable.rs  renderer.rs  vulkan_device.rs  vulkan_types.rs
