[package]
name = "sura-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.33.3"
ash-window = "0.7.0"
gpu-allocator = "0.10.0"

winit = "0.26.0"
image = "0.23.14"
bitflags = "1.3"
gltf = "0.16.0"
base64 = "0.13.0"
custom_error = "1.9.2"
glam = "0.20.1"
indexmap = "1.7.0"