[package]
name = "sura-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# vulkan things 
# note: these needs to be updated together because they use ash 
ash = "0.36"
ash-window = "0.9.1"
gpu-allocator = "0.17.0"
#
spirv-reflect = "0.2.3"

winit = "0.26.0"
image = "0.23.14"
bitflags = "1.3"
gltf = "0.16.0"
base64 = "0.13.0"
custom_error = "1.9.2"
glam = "0.20.1"
indexmap = "1.7.0"
