[package]
name = "sura-asset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
gltf = {version= "0.16.0" , features = ["KHR_texture_transform"]}
base64 = "0.13.0"
image = "0.23.14"
custom_error = "1.9.2"
indexmap = "1.7.0"
log = "0.4.0"
bytes = "1.1.0"
glam = "0.20.1"
memmap2 = "0.5.3"
rkyv ={ version = "0.7.37" }