[package]
name = "sura-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# note: these needs to be updated together because they use ash 
ash = "0.36"
ash-window = "0.9.1"
gpu-allocator = "0.17.0"
#
spirv_cross = {version = "0.23.1" ,features = ["glsl"]}  
winit = "0.26.0"
bitflags = "1.3"
#logging
log = "0.4.0"
env_logger = "0.9.0"
#
